--- a/views/future-block.tmpl
+++ b/views/future-block.tmpl
@@ -70,7 +70,7 @@
                     <tr>
                         <td class="text-right lh1rem pr-2 xs-w117">TIME</td>
                         <td class="lh1rem" style="min-width: 178px;">
-                            ({{timezone}}) {{.FormattedTime}} <span class="op60 fs12 nowrap">(<span data-target="main.age" data-age="{{.BlockTime}}"></span> ago)</span>
+                            ({{timezone}}) {{.FormattedTime}} <span class="op60 fs12 nowrap">ETA (<span data-target="main.age" data-age="{{.BlockTime}}"></span>)</span>
                         </td>
                     </tr>
                 </table>
